--- a/Tribute_page.css
+++ b/Tribute_page.css
@@ -1,3 +1,4 @@
+
 body{
   padding:15px;
   background-color:#cce6ff;
@@ -16,39 +17,44 @@ body{
   margin-bottom:3%;
 	background: linear-gradient(to bottom, #0033cc 0%, #ffffff 100%);
   border-style: solid;
-  border-width:2px;
+  border-width:4px;
   border-color:#0033cc;
-  height:20%;
+  height:120px;
   padding-left:10%;
+  padding-right:2%;
 }
 
-#heading_pic_holder{
+.heading_pic_holder{
 	border-style:groove;
 	height:100%;
-	width:auto;
+  width:10%
+  
+	
 	
 } 
 
-#heading_pic_1{
-  width:inherit;
-  height:inherit;
+.heading_pic_1{
+  width:auto;
+  height:100%;
+  margin-right:0;
+  
   /*border:solid;*/
-  padding-top:3%;
+  
   
 }
 #not_pic{
-  height:100%;
-  /*border:solid;*/
-  padding:0%;
+  height:inherit;
+  
   
 }
 h1{
 	font-size:300%;
+  color:#d9d9d9;
 }
 #pic_holder{
   padding: 20px 10px 20px 10px;
-  margin-left: 100px;
-  margin-right:100px;
+  margin-left: 20%;
+  margin-right:20%;
   background: linear-gradient(to bottom, #0033cc 0%, #ffffff 100%);
 }
 #mt_pic{
